# qorvault

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPENWEBUI_SETUP.md  README.md  RESTORATION.md  SECURITY.md  boarddocs_rag_tool.py  pyproject.toml  query.sh  test_tool.py
.github/: CODEOWNERS  dependabot.yml
boarddocs_loader/: README.md  pyproject.toml
boarddocs_loader/boarddocs_loader/: __init__.py  __main__.py  config.py  db.py  detector.py  html_utils.py  loader.py  models.py  parsers.py
boarddocs_loader/tests/: conftest.py  test_db.py  test_detector.py  test_loader.py  test_parsers.py
diagnostics/: pdf_diagnostic.py  requirements.txt
diarization/: diarize.py  verify_setup.py
docs/: PROGRESS_LOG.md
document_processor/: pyproject.toml  requirements.txt  setup.sh
document_processor/document_processor/: __init__.py  __main__.py  chunker.py  config.py  libreoffice_converter.py  ocr_client.py  pptx_extractor.py  processor.py
document_processor/tests/: conftest.py  test_chunker.py  test_ocr_client.py  test_pptx_extractor.py  test_processor.py
embedding_pipeline/: pyproject.toml  requirements.txt  setup.sh
embedding_pipeline/embedding_pipeline/: __init__.py  __main__.py  config.py  embedder.py  pipeline.py
embedding_pipeline/tests/: conftest.py  test_embedder.py  test_pipeline.py  test_qdrant_integration.py
infrastructure/: README.md  init.sql  podman-compose.yml  requirements.txt  setup.sh  teardown.sh  verify_infrastructure.py
logs/: activity_query.py  aggregator.py  finalize_session.py  parse_audit.py  session_logger.py
ocr_service/: README.md  ocr_service.service  requirements.txt  setup.sh
rag_api/: pyproject.toml  requirements.txt  setup.sh
rag_api/rag_api/: __init__.py  __main__.py  config.py  database_handler.py  embedder.py  hybrid_retriever.py  keyword_retriever.py  llm.py  main.py  models.py  prompts.py  reranker.py  retriever.py  rewriter.py  router.py
rag_api/static/: index.html
rag_api/tests/: conftest.py  test_api.py  test_embedder.py  test_llm.py  test_prompts.py  test_retriever.py
research/: DATA_SOURCES.md  batch_contradictions.py  build_documents.py  cheat_sheet_2026-02-25.md  load_into_rag.py  (+11 more)
(+53 files in other folders)
