[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rag-api"
version = "0.1.0"
description = "RAG API for BoardDocs document search and question answering"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
